fix accidental clicks on logo instead of menu on mobile (#132)

--- a/source/css/styles.80.css
+++ b/source/css/styles.80.css
@@ -792,7 +792,7 @@ footer.dark,
     position: relative;
 }
 
-.logo:hover h4 {
+.logo h4:hover {
     color: #318dde;
 }
 
